[tool.poetry]
name = "fycli"
version = "3.1.1"
description = ""
authors = ["Rob Wilson <roobert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sh = "^1.12.14"
pyyaml = "^5.3"
google-cloud-storage = "^1.38.0"
rich = "^10.7.0"
semver = "^2.13.0"

[tool.poetry.dev-dependencies]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
fy = 'fycli.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

