[tool.poetry]
name = "fycli"
version = "3.4.6"
description = ""
authors = ["Rob Wilson <roobert@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sh = "^1.12.14"
pyyaml = "^6.0.1"
semver = "^2.13.0"
Jinja2 = "^3.0.3"
rich = "^13.3.2"
google-cloud-storage = "^2.7.0"
packaging = "^24.1"

[tool.poetry.dev-dependencies]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.poetry.scripts]
fy = 'fycli.__main__:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

